--- a/blog-fenderSpoon/styles/blog-styles.css
+++ b/blog-fenderSpoon/styles/blog-styles.css
@@ -1,5 +1,5 @@
 #menu {
-    background: #DDD;
+    background: #6992db;
     text-align: center;
     padding: 5px;
     line-height: 1.5;
@@ -12,12 +12,18 @@
 }
 #menu a {
     text-decoration: none;
+
     padding: 5px 10px;
     border-radius: 5px;
 }
 
+a:-webkit-any-link {
+    color: black;
+    text-decoration: underline;
+    cursor: auto;
+}
 #menu a:hover {
-    background: #BBB;
+    background: #E6E6E6;
 }
 main > section {
     /*display: none;*/
@@ -41,22 +47,46 @@ table td {
     display: none;
     width: 80%;
     margin: 10px auto;
-    color: white;
+    color: black;
     text-align: center;
     padding: 5px;
     border-radius: 3px;
 }
-#loadingBox {
-    background: #7CB3E9;
+.loader {
+    height: 4px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    background-color: #ddd;
+}
+.loader:before{
+    display: block;
+    position: absolute;
+    content: "";
+    left: -200px;
+    width: 200px;
+    height: 4px;
+    background-color: #6992db;
+    animation: loading 2s linear infinite;
+}
+
+@keyframes loading {
+    from {left: -200px; width: 30%;}
+    50% {width: 30%;}
+    70% {width: 70%;}
+    80% { left: 50%;}
+    95% {left: 120%;}
+    to {left: 100%;}
 }
 #infoBox {
-    background: #393;
+    background: #6992db;
+
 }
 #errorBox {
     background: #F50;
 }
 footer {
-    background: #DDD;
+    background: #6992db;
     padding: 5px 10px;
     font-size: 0.8em;
     text-align: center;
