--- a/blog-fenderSpoon/styles/blog-styles.css
+++ b/blog-fenderSpoon/styles/blog-styles.css
@@ -6,9 +6,10 @@
     border-radius: 3px;
     overflow: auto;
 }
-#menu>#loggedInUser {
+#menu>#LoggedInUser {
     float: right;
     margin-right: 10px;
+    color: white;
 }
 #menu a {
     text-decoration: none;
@@ -91,4 +92,10 @@ footer {
     font-size: 0.8em;
     text-align: center;
     border-radius: 3px;
+}
+textarea{
+    border:1px solid #999999;
+    width: 100%;
+    margin: 5px 0;
+    padding: 3px;
 }
